[package]
name = "locast2tuner"
version = "0.1.0"
authors = ["Wouter de Bie <wouter.de.bie@datadoghq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.configure_me]
spec = "config_spec.toml"

[dependencies]
actix-web = "3"
bytes = "1.0.1"
chrono = "0.4.19"
chrono-tz = "0.5.3"
clap = "3.0.0-beta.2"
clap_conf = "0.1.5"
dirs = "3.0.1"
env_logger = "0.8.3"
format_xml = "0.1"
futures = "0.3"
fuzzy-matcher = "0.3.7"
hls_m3u8 = "0.4"
htmlescape = "0.3.1"
log = "0.4.14"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0"
simple-error = "0.2.3"
string-builder = "0.2.0"
sys-info = "0.8.0"
timer = "0.2.0"
tz-search = "0.1.1"
url = "2.2.1"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
zip = "0.5.10"
