[package]
name = "locast2tuner"
version = "0.1.13"
description = "Locast.org to Plex Media Server/Emby integration server"
authors = ["Wouter de Bie <wouter@evenflow.nl>"]
repository = "https://github.com/wouterdebie/locast2tuner"
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.deb]
maintainer = "Wouter de Bie <wouter@evenflow.nl>"
copyright = "2021, Wouter de Bie <wouter@evenflow.nl>"
license-file = ["LICENSE", "0"]
extended-description = """\
Locast.org to Plex Media Server/Emby integration server"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["README.md", "usr/share/doc/locast2tuner/README", "644"],
    ["assets/config.ini.example", "etc/locast2tuner/config.ini.example", "644"],
    ["target/release/locast2tuner", "/usr/bin/locast2tuner", "755"],

]
maintainer-scripts = "assets/debian/"
systemd-units = { enable = false }

[dependencies]
actix-web = "4.0.0-beta.3"
actix-rt = "2.2.0"
async-trait = "0.1.48"
atty = "0.2"
bytes = "1.0.1"
chrono = "0.4.19"
chrono-tz = "0.5.3"
clap = "3.0.0-beta.2"
clap_conf = "0.1.5"
dirs = "3.0.1"
env_logger = "0.8.3"
format_xml = "0.1"
futures = "0.3"
fuzzy-matcher = "0.3.7"
hls_m3u8 = "0.4"
htmlescape = "0.3.1"
itertools = "0.10.0"
log = "0.4.14"
prettytable-rs = "^0.8"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls-vendored"] }
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0"
simple-error = "0.2.3"
string-builder = "0.2.0"
sys-info = "0.8.0"
timer = "0.2.0"
tokio = "1.4.0"
tz-search = "0.1.1"
url = "2.2.1"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
zip = "0.5.10"

[build-dependencies]
rustc_version   = "0.3.3"

[profile.release]
panic = "abort"
